# RelativitySimulator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ecs.md  imgui.ini  run.sh
engine/: Cargo.toml
engine/src/: builder.rs  common.rs  game_builder.rs  game_loop.rs  lib.rs  macros.rs
engine/src/datastructures/: avl_tree.rs  graph_visitor.rs  kd_tree.rs  mod.rs  n_tree.rs  registry.rs  spatial_index.rs
engine/src/debug/: diagnostics_panel.rs  drive_info.rs  gl_debug.rs  logger.rs  macros.rs  metrics.rs  mod.rs
engine/src/ecs/: debug.rs  entity.rs  mod.rs  mono_behavior.rs  prefab.rs  system.rs  system_utilities.rs  world_proxy.rs
engine/src/ecs/components/: camera.rs  event_receiver.rs  guid.rs  mod.rs  renderables.rs
engine/src/ecs/entity/: entity_tree.rs  entity_tree_builder.rs  mod.rs
engine/src/ecs/prefab/: cube.rs  entity_manager.rs  mod.rs  particle.rs  prefab.rs  skybox.rs  sphere.rs  sprite.rs
engine/src/ecs/systems/: event_handling.rs  mod.rs  motion_system.rs  network_manager_system.rs  particle_system.rs  render_system.rs
engine/src/events/: event_channel.rs  event_channel_implementors.rs  event_dispatcher.rs  event_handling.rs  events.rs  imgui_events.rs  mod.rs  window_event_dispatcher.rs
engine/src/graphics/: asset_library.rs  instancing_table.rs  material.rs  mesh.rs  mod.rs  uniform.rs
engine/src/graphics/buffer/: buffer_config.rs  buffer_helpers.rs  buffer_layout.rs  data_buffer.rs  data_buffer_builder.rs  index_buffer.rs  mod.rs  vertex_array.rs  vertex_array_builder.rs  vertex_array_id.rs
engine/src/graphics/shader/: mod.rs  shader.rs  shader_builder.rs  shader_delegates.rs  shader_id.rs  shader_preprocessor.rs
engine/src/graphics/texture/: mod.rs  texture_asset.rs  texture_binder.rs  texture_builder.rs  texture_helpers.rs  texture_id.rs
engine/src/gui/: control_panel.rs  gui_panel.rs  gui_renderer.rs  mod.rs  system_panel.rs  widgets.rs
engine/src/net/: actor.rs  actor_handle.rs  connection.rs  connection_id.rs  connection_manager.rs  context.rs  enums.rs  messages.rs  mod.rs  net_actor.rs  net_callback.rs
engine/src/physics/: colliders.rs  collision.rs  components.rs  mod.rs
engine/src/platform/: mod.rs  screen.rs  window.rs
engine/src/renderer/: asset_library.rs  camera.rs  mod.rs  render_command.rs  render_queue.rs  renderer.rs  renderer_config.rs
engine/src/shapes/: block.rs  sprite.rs
engine/src/testing/: mod.rs  testing_gl_context.rs  testing_system.rs
engine/src/utils/: asset_ref.rs  counter.rs  math.rs  mod.rs  multi_map.rs  random.rs  running_state.rs  stopwatch.rs  timer.rs  timestep.rs  transform_stack.rs  types.rs  unsafe_mut_ref.rs
engine/test_resources/: complex_shader.fs  import_shader.fs
racer/: Cargo.toml
racer/src/: main.rs
racer/src/city/: city.rs  city_block.rs  city_builder.rs  mod.rs  renderable_blocks.rs
racer/src/systems/: city_manager.rs  mod.rs
sandbox/: Cargo.toml
sandbox/src/: components.rs  main.rs
sandbox/src/prefabs/: cube.rs  mod.rs
sandbox/src/systems/: mod.rs  multiplayer.rs  party.rs  player_controller.rs  sin_sphere.rs
src/: game.h  (+23 more)
(+326 files in other folders)
