[package]
authors = ["Benjamin Wasty <benny.wasty@gmail.com>"]
name = "learn-opengl-rs"
version = "0.6.1"

[dependencies]
cgmath = "0.17.0"
image = "0.19.0"
num = "0.3.0"
rand = "0.7.3"
lazy_static = "1.4.0"
regex = "1.3.9"
gl = "0.12.0"
glfw = "0.31.0"
imgui = "0.1.0"
imgui-opengl-renderer = "0.5.0"
imgui-glfw-rs = "0.4.1"
tobj = "2.0.2"
specs = { version = "*", features = ["specs-derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# no features by default
default = []

# Add feature "foo" here, then you can use it. 
# Our "foo" feature depends on nothing else.
debug = []