[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.17.0"
image = "0.19.0"
num = "0.3.0"
rand = "0.7.3"
lazy_static = "1.4.0"
regex = "1.3.9"
gl = "0.12.0"
glfw = "0.31.0"
imgui = "0.1.0"
imgui-opengl-renderer = "0.5.0"
imgui-glfw-rs = "0.4.1"
tobj = "2.0.2"
specs = { version = "*", features = ["specs-derive", "shred-derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
either = "1.6.1"
crossbeam-queue = "0.3"
log = "0.4.0"
env_logger = "0.8.4"