[package]
name = "racer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
specs = { version = "*", features = ["specs-derive", "shred-derive"] }
cgmath = { version = "0.17.0", features = ["serde"] }
env_logger = "0.8.4"