[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
specs = { version = "*", features = ["specs-derive", "shred-derive"] }
cgmath = "0.17.0"
either = "1.6.1"
