[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
specs = { version = "*", features = ["specs-derive", "shred-derive"] }
cgmath = { version = "0.17.0", features = ["serde"] }
either = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.8.4"
serde_json = "1.0.85"